<resources>
    <string name="app_name">Igeneration</string>
    <string name="news">Actualités</string>
    <string name="forum">forum</string>
    <string name="books">Livres</string>
    <string name="club_igen">Club iGen</string>
    <string name="settings">Réglages</string>
    <string name="news_fragment">fragment d\'actus</string>
    <string name="forum_fragment">fragment de forum</string>
    <string name="books_fragment">fragment de livres</string>
    <string name="club_igen_fragment">fragment de club igen</string>
    <string name="settings_fragment">fragment de réglages</string>
    <string name="main">Général</string>
    <string name="notification">Notifications</string>
    <string name="notifications_preference">préférences de notifications</string>
    <string name="help_me">Assistance</string>
    <string name="contact_us">nous contacter</string>
    <string name="legal">Mentions légales</string>
    <string name="website">Siteweb</string>
    <string name="title_activity_news_detail">newsDetail</string>
</resources>
